# engo

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  dist-workspace.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/engo-ai/: Cargo.toml
crates/engo-ai/src/: anthropic.rs  lib.rs  prompt.rs
crates/engo-ai/tests/: anthropic_integration.rs
crates/engo-cli/: Cargo.toml
crates/engo-cli/src/: main.rs
crates/engo-cli/src/commands/: init.rs  mod.rs  translate.rs
crates/engo-cli/tests/: translate_cli.rs
crates/engo-core/: Cargo.toml
crates/engo-core/src/: cache.rs  catalog.rs  config.rs  detect.rs  diff.rs  error.rs  lib.rs  safety.rs  validate.rs
crates/engo-core/src/formats/: arb.rs  json.rs  mod.rs  xliff.rs
crates/engo-core/tests/: xliff_roundtrip.rs
crates/engo-core/tests/fixtures/: inline-2.0.xlf  simple-1.2.xlf  simple-2.0.xlf
