[workspace]
resolver = "2"
members = [
    "crates/engo-core",
    "crates/engo-ai",
    "crates/engo-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/valerymelou/engo"
homepage = "https://github.com/valerymelou/engo"
authors = ["Valery Melou <me@valerymelou.com>"]
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
quick-xml = "0.31"
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.11", default-features = false }
indicatif = "0.17"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
futures = "0.3"
glob = "0.3"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1
