[package]
name = "engo-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "AI provider abstractions for Engo (Anthropic, OpenAI, Engo Cloud)."

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
async-trait.workspace = true
tracing.workspace = true
tokio.workspace = true
engo-core = { path = "../engo-core" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "test-util"] }
wiremock = "0.6"
