[package]
name = "engo-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "AI provider abstractions for the Engo i18n CLI (Anthropic today; OpenAI and Engo Cloud on the roadmap)."
readme = "../../README.md"
keywords = ["i18n", "translation", "anthropic", "llm", "l10n"]
categories = ["internationalization", "api-bindings"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
async-trait.workspace = true
tracing.workspace = true
tokio.workspace = true
engo-core = { path = "../engo-core", version = "0.1.0" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "test-util"] }
wiremock = "0.6"
