[package]
name = "engo-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Engo — local-first AI-assisted i18n CLI."

[[bin]]
name = "engo"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dialoguer.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
futures.workspace = true
glob.workspace = true
indicatif.workspace = true
engo-core = { path = "../engo-core" }
engo-ai = { path = "../engo-ai" }

[dev-dependencies]
tokio = { workspace = true }
wiremock = "0.6"
serde_json.workspace = true
