[package]
name = "engo-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Engo — local-first, AI-assisted i18n CLI for XLIFF, ARB, and nested JSON catalogs."
readme = "../../README.md"
keywords = ["i18n", "xliff", "arb", "translation", "cli"]
categories = ["command-line-utilities", "internationalization"]

[[bin]]
name = "engo"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dialoguer.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
futures.workspace = true
glob.workspace = true
indicatif.workspace = true
engo-core = { path = "../engo-core", version = "0.1.2" }
engo-ai = { path = "../engo-ai", version = "0.1.2" }

[dev-dependencies]
tokio = { workspace = true }
wiremock = "0.6"
serde_json.workspace = true
