[package]
name = "engo-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core types, config, format parsers, and project detection for Engo."

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
quick-xml.workspace = true
tracing.workspace = true
rusqlite.workspace = true
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
pretty_assertions = "1"
